# langgraph-fastapi-template

./: .env  main.py  pyproject.toml
app/agent/: agent.py  edge.py  node.py
app/common/: constants.py
app/config/: __init__.py  common_config.py  response_config.py
app/model/: __init__.py  state.py
app/routers/: ai_chat.py
app/service/: __init__.py  ai_chat_service.py
app/service/impl/: __init__.py  openai_chat_service_impl.py
app/tools/: __init__.py  user_tools.py
app/tools/mcp_client/: my_mcp_client.py
app/tools/mcp_server/: my_mcp_server.py
