[project]
name = "langgraph-fastapi-template"
version = "0.1.0"
description = "FastAPI集成LangGraph模板"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-core>=1.0.5",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langfuse>=3.10.0",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg[binary]>=3.2.7",
]
